
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* examples/Examples.java
	* src/lattice/ImplicationalSystem.iuml
	* src/lattice/ImplicationalSystem.java
	* test/lattice/ImplicationalSystemTest.java
		^ Standardize count method names

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* src/lattice/ArrowRelationWriterTeX.iuml
		^ Correct typo

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* all files
		^ Update Copyright

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/package-info.java
	* src/lattice/ComparableSet.java
	* src/lattice/Concept.java
	* src/lattice/Context.java
		^ Update todo

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* src/lattice/ComparableSet.iuml
	* src/lattice/ComparableSet.java
	* test/lattice/ComparableSetTest.java
		^ Rename method

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* doc/api/README.md
	* src/lattice/Concept.java
	* src/lattice/ConceptLattice.java
	* test/lattice/ConceptLatticeTest.java
	* src/lattice/ConceptLatticeWriter.iuml
	* src/lattice/ConceptLatticeWriter.java
	* src/lattice/ConceptLatticeWriterDot.iuml
	* src/lattice/ConceptLatticeWriterDot.java
	* src/lattice/ConceptLatticeWriterFactory.iuml
	* src/lattice/ConceptLatticeWriterFactory.java
	* test/lattice/ConceptLatticeTest.java
		^ Implement abstract writer pattern for ConceptLattice

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* src/lattice/Rule.java
	* test/lattice/RuleTest.java
		- Remove useless method

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* doc/api/README.md
		^ Update api doc

2014-05-06 Christophe Demko <chdemko@gmail.com>
	* src/lattice/ArrowRelation.java